# 3D_Viewer

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/include/: Model.h  OpenGLWidget.h  controller.h  gif.h  qtshader.h  s21_matrix_oop.h  test.h  viewer.h
src/shaders/: line_fragment_shader  line_vertex_shader  point_fragment_shader  point_vertex_shader
src/sources/: Model.cc  OpenGLWidget.cc  controller.cc  gif.cpp  main.cc  qtshader.cc  s21_matrix_oop.cc  viewer.cc
src/sources/gui/: viewer.ui
src/sources/tests/: correct_sample.txt  incorrect_sample.txt  test.cc
